# speedscan

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: design.md  roadmap.md  ui-mockup.md
src/speedscan/: __init__.py  __main__.py  cache.py  cli.py  engine.py  persistence.py
src/speedscan/sources/: __init__.py  base.py  txt.py
src/speedscan/ui/: __init__.py  app.py  word_view.py
tests/: test_cache.py  test_engine.py  test_persistence.py  test_sources_base.py  test_sources_factory.py  test_sources_txt.py  test_word_view.py
