[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speedscan"
version = "0.1.0"
description = "A lightweight RSVP reader for fast scanning of textbooks and articles."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kolter Saurey", email = "wksaurey@gmail.com" },
]
keywords = ["rsvp", "reader", "speed-reading", "pdf", "textbook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "build>=1.0",
]

[project.scripts]
speedscan = "speedscan.cli:main"

[project.urls]
Homepage = "https://github.com/wksaurey/speedscan"
Repository = "https://github.com/wksaurey/speedscan"
Issues = "https://github.com/wksaurey/speedscan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/speedscan"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
